Changed background script to background page

--- a/extension/v2/public/manifest.json
+++ b/extension/v2/public/manifest.json
@@ -9,12 +9,11 @@
     },
     "author": "Jan Dvořák",
     "background": {
-        "scripts": [
-            "background.js"
-        ],
+        "page": "background.html",
         "persistent": true
     },
     "permissions": [
+        "*://*/*",
         "storage",
         "tabs",
         "clipboardRead",
