--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "manifest_version": 3,
+    "manifest_version": 2,
     "name": "__MSG_extName__",
     "version": "0.0.1",
     "default_locale": "en",
@@ -9,20 +9,18 @@
     },
     "author": "Jan Dvořák",
     "background": {
-        "service_worker": "background.js",
-        "type": "module"
+        "page": "background.html",
+        "persistent": true
     },
-    "host_permissions": ["<all_urls>"],
     "permissions": [
+        "*://*/*",
         "storage",
         "tabs",
         "nativeMessaging",
-        "printerProvider",
-        "scripting",
-        "webRequest",
         "clipboardRead",
-        "clipboardWrite"
-
+        "clipboardWrite",
+        "identity",
+        "identity.email"
     ],
     "storage": {
         "managed_schema": "schema.json"
