--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -1,4 +1,5 @@
 {
+    "key": "jgcacpocfbacpofdlbnkdpnkomfnonlc",
     "manifest_version": 2,
     "name": "__MSG_extName__",
     "version": "0.0.1",
